# ops-workflow-automation

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  demo_run_samples.py  dependencies.py  extractor.py  integrations.py  main.py  models.py  reviewer.py  storage.py  utils.py
app/api/: __init__.py
app/core/: __init__.py  constants.py  exceptions.py  logging_config.py  middleware.py
app/db/: __init__.py  models.py
app/integrations/: __init__.py  crm_client.py  slack_client.py
app/models/: __init__.py  audit.py  batch.py  confidence.py  email.py  review.py
app/prompts/: email_extraction.py
app/repositories/: __init__.py  audit_repo.py  email_repo.py  review_repo.py
app/routes/: health.py  ingest.py  items.py
app/services/: ai_client.py  batch_service.py  confidence.py  confidence_service.py  extraction.py  extraction_service.py  keyword_extractor.py  review_service.py  routing.py  routing_service.py  workflow.py  workflow_service.py
docs/: architecture.md  failure-modes.md  problem-definition.md  runbook.md
docs/decisions/: 001-llm-provider-selection.md  002-confidence-scoring-approach.md  003-data-storage-strategy.md
eval/: __init__.py  evaluate.py  metrics.py  test_set.jsonl
migrations/: env.py
schemas/: extraction_schema.json
tests/: conftest.py  test_audit.py  test_confidence.py  test_extraction_service.py  test_extractor.py  test_routing.py  test_workflow.py
(+31 files in other folders)
